two new project and one updated

--- a/index.html
+++ b/index.html
@@ -2257,7 +2257,7 @@
 
                 <div class="opisi-projektov">
                   <h4>AndrazTech</h4>
-                  <p>Cilj je bil strankam omogočiti enostaven vpogled v cene posameznih popravil.</p>
+                  <p>Enostavna in pregledna predstavitvena stran, zgrajena s HTML, CSS in JS.</p>
 
                   <div class="orodja"></div>
 
@@ -2334,6 +2334,52 @@
 
                   <a
                     onclick=" window.open('https://www.creativeula.com','_blank')"
+                    class="button"
+                    >Obišči stran</a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="slide">
+              <div class="pro">
+                <div class="projekt-slika-section">
+                  <div class="background-image-layout notranjskahisa-slika">
+
+                  </div>
+                </div>
+
+                <div class="opisi-projektov">
+                  <h4>Notranjska hiša</h4>
+                  <p>Tradicija in narava. Obiskovalcu želimo že ob obisku strani približati utrip domačije.</p>
+
+                  <div class="orodja"></div>
+
+                  <a
+                    onclick=" window.open('https://notranjskahisa.si/','_blank')"
+                    class="button"
+                    >Obišči stran</a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="slide">
+              <div class="pro">
+                <div class="projekt-slika-section">
+                  <div class="background-image-layout nezaillustrations-slika">
+
+                  </div>
+                </div>
+
+                <div class="opisi-projektov">
+                  <h4>Než(i)ne ilustracije</h4>
+                  <p>Lepota, igrivost in ljubezen v Nežinih ilustracijah. Integracija z Instagamom omogoča enostavno dodajanje novih vsebin.</p>
+
+                  <div class="orodja"></div>
+
+                  <a
+                    onclick=" window.open('https://nezaillustrations.si/','_blank')"
                     class="button"
                     >Obišči stran</a
                   >
